--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
       "request": "launch",
       "program": "${file}",
       "console": "internalConsole",
-      "justMyCode": false
-    }
-  ]
+      "justMyCode": false,
+    },
+  ],
 }
