--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,28 +1,22 @@
 {
   "[python][json][jsonc][yaml]": {
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
   },
   "[json][jsonc][yaml]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
   },
   "[python]": {
     "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.codeActionsOnSave": {
       "source.fixAll": true,
-      "source.organizeImports": true
-    }
+      "source.organizeImports": true,
+    },
   },
   "python.analysis.typeCheckingMode": "basic",
-  "python.testing.pytestArgs": [
-    "--color=yes",
-    "-vv"
-    // Incompatible with debugging
-    //"--cov=graphql_sqlalchemy",
-    //"--cov-report=xml",
-  ],
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true,
+  "python.testing.pytestEnabled": false,
+  "python.testing.unittestEnabled": true,
+  "python.testing.unittestArgs": ["dicover", "-s", "tests"],
   "python.terminal.activateEnvironment": false,
   "coverage-gutters.showGutterCoverage": true,
-  "editor.wordBasedSuggestions": false
+  "editor.wordBasedSuggestions": false,
 }
