--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -44,7 +44,7 @@ jobs:
         run: python -m pip install --upgrade pip wheel
 
       - name: Install Python package and dependencies
-        run: pip install .[test]
+        run: pip install .
 
       - name: Run tests
         run: python -m unittest dicover -s tests
