--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -47,4 +47,4 @@ jobs:
         run: pip install .
 
       - name: Run tests
-        run: python -m unittest dicover -s tests
+        run: python -m unittest discover -s tests
