--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,8 @@
     },
   },
   "python.analysis.typeCheckingMode": "basic",
-  "python.testing.pytestEnabled": false,
   "python.testing.unittestEnabled": true,
-  "python.testing.unittestArgs": ["dicover", "-s", "tests"],
+  "python.testing.unittestArgs": ["-vv", "-s", "tests"],
   "python.terminal.activateEnvironment": false,
   "coverage-gutters.showGutterCoverage": true,
   "editor.wordBasedSuggestions": false,
