--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,7 @@ python = "3.12"
 [[tool.hatch.envs.test.matrix]]
 python = ["3.9", "3.12"]
 [tool.hatch.envs.test.scripts]
-run = "python -m unittest discover -s tests"
+run = "python -m unittest discover -vv -s tests"
 
 [tool.mypy]
 python_version = "3.12"
