--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,8 @@
   "[python]": {
     "editor.defaultFormatter": "charliermarsh.ruff",
     "editor.codeActionsOnSave": {
-      "source.fixAll": true,
-      "source.organizeImports": true,
+      "source.fixAll": "explicit",
+      "source.organizeImports": "explicit",
     },
   },
   "python.analysis.typeCheckingMode": "basic",
@@ -17,5 +17,5 @@
   "python.testing.unittestArgs": ["-vv", "-s", "tests"],
   "python.terminal.activateEnvironment": false,
   "coverage-gutters.showGutterCoverage": true,
-  "editor.wordBasedSuggestions": false,
+  "editor.wordBasedSuggestions": "off",
 }
